--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </ul>         
         <h2>Recursos Adicionales</h2>    
     <p>En clase, vimos un video sobre las fases del diseño de bases de datos. Aquí muestro el enlace: <a href="https://www.youtube.com/watch?v=HouTrlFc6Qw " target="_blank">Fases del diseño.</a></p>
-    <div style="text-align: right;"> 
+    <div style="text-align: center;"> 
         <a href="#top" class="button">Volver al inicio</a>
         <a href="https://repositoriodam.github.io/RepositorioDAM/" class="button">Página Principal</a>
     </div>   
