--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </nav>   
     <section>
         <h2>Desarrollo de Aplicaciones Multiplataforma - Primer Curso</h2>
-        <img class="img-bases-datos" src="database.jpg" alt="Logo de bases de datos">
+        <img class="img-bases-datos" src="mysql.png" alt="Logo de bases de datos">
         <p>En esta asignatura hemos aprendido a realizar diagramas entidad/relacion, interpretar estos diagramas. También hemos estudiado el diseño lógico y la normalización. Los contenidos de la asignatura se basan en:</p>
         <h2 id="contenidos">Contenidos del Curso</h2>
         <ul>
