--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
         }
         
         .img-bases-datos {
-            width: 15%;
-            margin: 10px;
-            margin-bottom: 20px;
-            margin-top: -1px;
+            width: 10%;
+            margin: 10px;            
+            margin-top: -80px;
             border-radius: 10px;
             box-shadow: 5px 5px 5px 0 rgba(0,0,0,0.2);
+            float: right;
+            clear:both;
         }
 
         .button {
@@ -138,6 +139,7 @@
 <body>
     <header>
         <h1 id="top">Bases de Datos</h1>
+        <img class="img-bases-datos" src="mysql.png" alt="Logo de bases de datos">
     </header>
     <nav>
         <a href="#top">Inicio</a>
@@ -145,8 +147,7 @@
         <a href="#practicas">Mis Prácticas</a>
     </nav>   
     <section>
-        <h2>Desarrollo de Aplicaciones Multiplataforma - Primer Curso</h2>
-        <img class="img-bases-datos" src="mysql.png" alt="Logo de bases de datos">
+        <h2>Desarrollo de Aplicaciones Multiplataforma - Primer Curso</h2>        
         <p>En esta asignatura hemos aprendido a realizar diagramas entidad/relacion, interpretar estos diagramas. También hemos estudiado el diseño lógico y la normalización. Los contenidos de la asignatura se basan en:</p>
         <h2 id="contenidos">Contenidos del Curso</h2>
         <ul>
@@ -174,7 +175,7 @@
         </ul>         
         <h2>Recursos Adicionales</h2>    
     <p>En clase, vimos un video sobre las fases del diseño de bases de datos. Aquí muestro el enlace: <a href="https://www.youtube.com/watch?v=HouTrlFc6Qw " target="_blank">Fases del diseño.</a></p>
-    <div style="text-align: left;"> 
+    <div style="text-align: right;"> 
         <a href="#top" class="button">Volver al inicio</a>
         <a href="https://repositoriodam.github.io/RepositorioDAM/" class="button">Página Principal</a>
     </div>   
@@ -185,3 +186,4 @@
     </footer>
 </body>
 </html>
+ 
