--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         }
         
         .img-bases-datos {
-            width: 10%;
+            width: 6%;
             margin: 10px;            
             margin-top: -80px;
             border-radius: 10px;
@@ -175,7 +175,7 @@
         </ul>         
         <h2>Recursos Adicionales</h2>    
     <p>En clase, vimos un video sobre las fases del diseño de bases de datos. Aquí muestro el enlace: <a href="https://www.youtube.com/watch?v=HouTrlFc6Qw " target="_blank">Fases del diseño.</a></p>
-    <div style="text-align: right;"> 
+    <div style="text-align: left;"> 
         <a href="#top" class="button">Volver al inicio</a>
         <a href="https://repositoriodam.github.io/RepositorioDAM/" class="button">Página Principal</a>
     </div>   
